Using latest optical indices data

--- a/ecoscatter.html
+++ b/ecoscatter.html
@@ -56,7 +56,7 @@
 			width: 100px;
 		}
 		
-		.axis text {font-family: Helvetica; font-size: 8pt;}
+		.axis text {font-family: Helvetica; font-size: 7pt;}
 		.axis line,
 		.axis path {
 			fill: none;
@@ -170,7 +170,8 @@
 		// load the data
 		var ts = new EcoTimeseries(
 			[
-				'data/indices_02-21-2016g.csv',
+				'data/indices_mid-day_avg_prep_02-21-2016g_flagExcluded.csv',
+//				'data/indices_02-21-2016g.csv',
 				'data/EcoSpec_Summer_2015_GPP_Reco_data_new_DOY-shifted.csv',
 				'data/Decagon_NDVI_&_PRI_02-27-2017_30min.csv'
 			],
