--- a/ecoscatter.html
+++ b/ecoscatter.html
@@ -9,6 +9,8 @@
 
 	<!-- local libraries -->
 	<script src='lib/papaparse.js' type='text/javascript'></script>
+	<script src='lib/sylvester.js' type='text/javascript'></script>
+	<script src='lib/glUtils.js' type='text/javascript'></script>
 
 	<!-- common ui components -->
 	<script src="src/slider.js" type="text/javascript"></script>
@@ -164,6 +166,7 @@
 		<input id="checkShowPoints" type="checkbox" onclick="scatterVisibility()">Show points &nbsp;
 		<input id="checkShowConnected" type="checkbox" onclick="scatterVisibility()">Show lines
 		<input id="checkShowAnimation" type="checkbox" onclick="scatterVisibility()">Particles animation
+		<input id="checkGlobalScale" type="checkbox" onclick="scatterGlobalScale()">Use global X/Y scales
 
 	</div>
 	<svg id="mainSVG" width="1100" height="1100" class="visArea"></svg>
@@ -328,8 +331,17 @@
 			if (ANIMATION_VISIBILITY && animationFrame === null) {
 				globalAnimate();
 			}
-
 			toggleScatterElementVisibility();
+		}
+		function scatterGlobalScale()
+		{
+			GLOBAL_SCALE = d3.select("#checkGlobalScale").node().checked;
+			for (var i=0; i<scatterRows.length; i++) {
+				var scatterplots = scatterRows[i].getScatterplots();
+				for (var j=0; j<scatterplots.length; j++) {
+					scatterplots[j].enableGlobalScale(GLOBAL_SCALE);
+				}
+			}
 		}
 
 		function initUI()
@@ -337,8 +349,32 @@
 			d3.select("#checkShowPoints").node().checked = POINT_VISIBILITY;
 			d3.select("#checkShowConnected").node().checked = CONNECTED_VISIBILITY;
 			d3.select("#checkShowAnimation").node().checked = ANIMATION_VISIBILITY;
+			d3.select("#checkGlobalScale").node().checked = GLOBAL_SCALE;
 				
 		}
 	</script>
+	<script id="shader-vs" type="x-shader/x-vertex">
+		attribute vec2 aVertexPosition;
+		attribute vec4 aVertexColor;   
+		uniform mat4 uMVMatrix;
+		uniform mat4 uPMatrix;
+
+		// vertex
+		varying lowp vec4 vColor;
+		    
+		void main(void) {
+			gl_Position = uPMatrix * uMVMatrix * vec4(aVertexPosition, 0.0, 1.0);
+			vColor = vec4(vec3(aVertexColor), 0.7);
+			gl_PointSize = 5.0;
+		}
+    </script>
+
+	<script id="shader-fs" type="x-shader/x-fragment">
+		varying lowp vec4 vColor;
+		void main(void) {
+			gl_FragColor = vColor;
+		}
+    </script>
+
 </body>
 </html>
