Work on column view

--- a/tempo.html
+++ b/tempo.html
@@ -102,6 +102,7 @@
 
 	<script type="text/javascript">
 		var tempo = null;
+		var theData = null;		// global object containing EcoTimeseries
 		var TIMESERIES_DATA = [
 			'data/indices_mid-day_avg_prep_02-21-2016g_flagExcluded.csv',
 			'data/EcoSpec_Summer_2015_GPP_Reco_data_new_DOY-shifted.csv',
