--- a/tempo.html
+++ b/tempo.html
@@ -11,7 +11,6 @@
 
 	<!-- code delivery network -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/queue-async/1.0.7/queue.min.js"></script>
 	<!--
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 	-->
@@ -29,6 +28,9 @@
 	<script src="src/timeseries.js" type="text/javascript"></script>
 	<script src="src/slider.js" type="text/javascript"></script>
 	<script src="src/tempo.js" type="text/javascript"></script>
+	<script src="src/tempo_column.js" type="text/javascript"></script>
+	<script src="src/tempo_scatter.js" type="text/javascript"></script>
+
 	<script src="src/ui_utils.js" type="text/javascript"></script>
 
 	<style>
