--- a/tempo.html
+++ b/tempo.html
@@ -10,9 +10,7 @@
 	<link href='https://fonts.googleapis.com/css?family=Anonymous+Pro:400,700' rel='stylesheet' type='text/css'>
 
 	<script src="lib/d3.min.js" charset="utf-8"></script>
-	<!--
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-	-->
+	<script src="lib/jquery.min.js"></script>
 
 	<!-- local libraries -->
 	<script src='lib/papaparse.min.js' type='text/javascript'></script>
@@ -174,19 +172,22 @@
 			// update tempo
 			if (tempo) {
 				tempo.resizeWindow();
+				tempo.renderGL();
 			}
 		}
 		window.onresize = resizeWindow;
 		
 		// fire up things
-		function dataReady() {
+		function dataReady() 
+		{
+			// get gl context
+			gl = d3.select("#visCanvas").node().getContext("webgl");
+
 			resizeWindow();
 
 			// initialize the vis
 			tempo = new Tempo();
-		
-			// get gl context
-			gl = d3.select("#visCanvas").node().getContext("webgl");
+	
 		}
 		
 	</script>
