Resize scatter views

--- a/ecoscatter.html
+++ b/ecoscatter.html
@@ -243,7 +243,7 @@
 			var N = this.scatterRows.length;
 
 			// slider
-			var sliderX = (2+X_TIME_OFFSET) + N*(SLIDER_THICKNESS+1);
+			var sliderX = (2+X_TIME_OFFSET) + N*(DEFAULT_SLIDER_THICKNESS+1);
 			var sliderY = Y_TIME_OFFSET;
 			
 			// scatterplot
