--- a/tempo.html
+++ b/tempo.html
@@ -59,7 +59,7 @@
 		}
 
 		#visSVG {
-			border: 1px dashed #cccccc;
+			/* border: 1px dashed #cccccc; */
 		}
 
 		#visCanvas {
@@ -92,7 +92,7 @@
 
 	<!-- visualization space -->
 	<div class="visSpace" width="100%">
-		<svg id="visSVG" width="100%" height="100%" style="border: 1px dashed #cccccc"></svg>
+		<svg id="visSVG" width="100%" height="100%"></svg>
 		<canvas id="visCanvas"></canvas>
 		<svg id="interactSVG" width="0" height="0"></svg>
 	</div>
